# uck358-rag

./: .gitignore  chapter_headers.json  evaluate.py  evaluate_images.py  pyproject.toml  stage1.py  stage2.py  stage3.py  stage4.py
book/assets-evaluation-backup/chapter1/: _page_10_Picture_8.md  _page_5_Figure_1.md  _page_7_Figure_1.md  _page_8_Figure_1.md
book/assets-evaluation-backup/chapter10/: _page_10_Figure_1.md  _page_7_Figure_3.md  _page_8_Figure_4.md
book/assets-evaluation-backup/chapter11/: _page_11_Figure_1.md  _page_12_Figure_1.md  _page_17_Figure_1.md  _page_1_Figure_1.md  _page_21_Figure_1.md  _page_2_Figure_4.md  _page_3_Figure_1.md  _page_8_Figure_1.md  _page_8_Figure_3.md
book/assets-evaluation-backup/chapter12/: _page_3_Figure_1.md  _page_4_Figure_1.md
book/assets-evaluation-backup/chapter13/: _page_2_Figure_1.md  _page_3_Figure_0.md
book/assets-evaluation-backup/chapter14/: _page_10_Figure_4.md  _page_15_Figure_1.md  _page_17_Figure_1.md  _page_20_Figure_7.md  _page_22_Figure_1.md  _page_24_Figure_5.md  _page_5_Figure_1.md  _page_6_Figure_1.md  (+2 more)
book/markdowns-backup/: chapter1.md  chapter10.md  chapter11.md  chapter12.md  chapter13.md  chapter14.md  chapter15.md  chapter16.md  chapter17.md  chapter18.md  chapter19.md  chapter2.md  chapter20.md  chapter21.md  chapter22.md  chapter23.md  chapter24.md  chapter3.md  chapter4.md  chapter5.md  chapter6.md  chapter7.md  chapter8.md  chapter9.md
dataset/: dataset.jsonl  dataset1.jsonl  dataset2.jsonl  dataset3.jsonl  dataset4.jsonl  dataset5.jsonl
graphrag/: graphrag1.py  graphrag2.py  graphrag3.py
lora/: lora1-next.py  lora1.py  lora2.py  lora3.py
rag/: rag1.py  rag2.py  rag3.py
(+188 files in other folders)
