[project]
name = "final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "marker-pdf>=1.3.0",
    "ollama>=0.6.2",
    "openai>=2.37.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "surya-ocr>=0.11.0",
    "transformers<4.50",
    "torch",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }